fix: vue 파일 확장자 추가

--- a/stories/components/dataDisplay/Avatar.stories.mdx
+++ b/stories/components/dataDisplay/Avatar.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Avatar, { avatarSizes, avatarTypes } from '@/components/components/dataDisplay/Avatar';
+import Avatar, { avatarSizes, avatarTypes } from '@/components/components/dataDisplay/Avatar.vue';
 
 <Meta
     title="Data Display/Avatar"
