--- a/stories/components/dataDisplay/Badge.stories.mdx
+++ b/stories/components/dataDisplay/Badge.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Badge, { badgeColors, badgeSizes, badgeTypes } from '@/components/components/dataDisplay/Badge';
-import Icon from '@/components/elements/core/icon/Icon';
-import Divider from '@/components/elements/utility/Divider';
+import Badge, { badgeColors, badgeSizes, badgeTypes } from '@/components/components/dataDisplay/Badge.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
 
 <Meta
   title="Data Display/Badge"
