--- a/stories/components/dataDisplay/Chip.stories.mdx
+++ b/stories/components/dataDisplay/Chip.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Chip, { ChipColors, ChipSizes, ChipTypes, ChipSizesWithCloseButton } from '@/components/components/dataDisplay/chips/Chip';
-import Typography from "@/components/elements/core/typography/Typography";
+import Chip, { ChipColors, ChipSizes, ChipTypes, ChipSizesWithCloseButton } from '@/components/components/dataDisplay/chips/Chip.vue';
+import Typography from "@/components/elements/core/typography/Typography.vue";
 
 <Meta
     title="Data Display/Chip/Chip"
