--- a/stories/components/dataDisplay/ChipGroup.stories.mdx
+++ b/stories/components/dataDisplay/ChipGroup.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Chip, { ChipSizes, ChipTypes, ChipColors } from '@/components/components/dataDisplay/chips/Chip';
-import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup';
-import Grid from '@/components/layout/Grid';
-import Row from '@/components/layout/Row';
-import StyleCol from '@/components/layout/StyleCol';
+import Chip, { ChipSizes, ChipTypes, ChipColors } from '@/components/components/dataDisplay/chips/Chip.vue';
+import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup.vue';
+import Grid from '@/components/layout/Grid.vue';
+import Row from '@/components/layout/Row.vue';
+import StyleCol from '@/components/layout/StyleCol.vue';
 
 <Meta
     title="Data Display/Chip/ChipGroup"
