--- a/stories/components/dataDisplay/EmptyBox.stories.mdx
+++ b/stories/components/dataDisplay/EmptyBox.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import NewGrid from '@/components/layout/NewGrid';
-import NewRow from '@/components/layout/NewRow';
-import NewCol from '@/components/layout/NewCol';
-import EmptyBox, { Types } from '@/components/components/dataDisplay/EmptyBox';
-import Typography from '@/components/elements/core/typography/Typography';
+import NewGrid from '@/components/layout/NewGrid.vue';
+import NewRow from '@/components/layout/NewRow.vue';
+import NewCol from '@/components/layout/NewCol.vue';
+import EmptyBox, { Types } from '@/components/components/dataDisplay/EmptyBox.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 
 <Meta
 	title="Data Display/EmptyBox"
