--- a/stories/components/dataDisplay/Table.stories.mdx
+++ b/stories/components/dataDisplay/Table.stories.mdx
@@ -1,14 +1,14 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Table from '@/components/components/dataDisplay/Table';
-import Typography from '@/components/elements/core/typography/Typography';
-import Divider from '@/components/elements/utility/Divider';
-import ListItem from '@/components/components/dataDisplay/list/list/ListItem';
-import List from '@/components/components/dataDisplay/list/list/List';
-import Button from '@/components/components/general/button/Button';
-import LinkButton from '@/components/components/general/button/LinkButton';
-import Grid from '@/components/layout/Grid';
-import Row from '@/components/layout/Row';
-import StyleCol from '@/components/layout/StyleCol';
+import Table from '@/components/components/dataDisplay/Table.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
+import ListItem from '@/components/components/dataDisplay/list/list/ListItem.vue';
+import List from '@/components/components/dataDisplay/list/list/List.vue';
+import Button from '@/components/components/general/button/Button.vue';
+import LinkButton from '@/components/components/general/button/LinkButton.vue';
+import Grid from '@/components/layout/Grid.vue';
+import Row from '@/components/layout/Row.vue';
+import StyleCol from '@/components/layout/StyleCol.vue';
 
 <Meta
     title="Data Display/Table"
