--- a/stories/components/dataDisplay/card/EduCard.stories.mdx
+++ b/stories/components/dataDisplay/card/EduCard.stories.mdx
@@ -1,12 +1,12 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import EduCard from '@/components/components/dataDisplay/card/EduCard';
-import Grid from '@/components/layout/Grid';
-import Row from '@/components/layout/Row';
-import StyleCol from '@/components/layout/StyleCol';
-import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup';
-import Chip from '@/components/components/dataDisplay/chips/Chip';
-import Icon from '@/components/elements/core/icon/Icon';
-import Swiper from '@/components/components/dataDisplay/Swiper';
+import EduCard from '@/components/components/dataDisplay/card/EduCard.vue';
+import Grid from '@/components/layout/Grid.vue';
+import Row from '@/components/layout/Row.vue';
+import StyleCol from '@/components/layout/StyleCol.vue';
+import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup.vue';
+import Chip from '@/components/components/dataDisplay/chips/Chip.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
+import Swiper from '@/components/components/dataDisplay/Swiper.vue';
 
 <Meta
 	title="Data Display/Card/EduCard"
