--- a/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
+++ b/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
@@ -1,10 +1,10 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import PromotionEduCard from '@/components/components/dataDisplay/card/PromotionEduCard';
-import Grid from '@/components/layout/Grid';
-import Row from '@/components/layout/Row';
-import StyleCol from '@/components/layout/StyleCol';
-import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup';
-import Chip from '@/components/components/dataDisplay/chips/Chip';
+import PromotionEduCard from '@/components/components/dataDisplay/card/PromotionEduCard.vue';
+import Grid from '@/components/layout/Grid.vue';
+import Row from '@/components/layout/Row.vue';
+import StyleCol from '@/components/layout/StyleCol.vue';
+import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup.vue';
+import Chip from '@/components/components/dataDisplay/chips/Chip.vue';
 
 <Meta
 	title="Data Display/Card/PromotionEduCard"
