--- a/stories/components/dataDisplay/list/list/List.stories.mdx
+++ b/stories/components/dataDisplay/list/list/List.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import ListItem from '@/components/components/dataDisplay/list/list/ListItem';
-import List from '@/components/components/dataDisplay/list/list/List';
-import Typography from '@/components/elements/core/typography/Typography';
-import Divider from '@/components/elements/utility/Divider';
-import Icon from '@/components/elements/core/icon/Icon';
+import ListItem from '@/components/components/dataDisplay/list/list/ListItem.vue';
+import List from '@/components/components/dataDisplay/list/list/List.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
 
 <Meta
     title="Data Display/List/List/List"
