--- a/stories/components/dataDisplay/list/list/ListItem.stories.mdx
+++ b/stories/components/dataDisplay/list/list/ListItem.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import ListItem, { ListItemSizes, ListItemCursors } from '@/components/components/dataDisplay/list/list/ListItem';
-import Typography from '@/components/elements/core/typography/Typography';
+import ListItem, { ListItemSizes, ListItemCursors } from '@/components/components/dataDisplay/list/list/ListItem.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 
 <Meta
     title="Data Display/List/List/ListItem"
