--- a/stories/components/dataDisplay/swiper/Swiper.stories.mdx
+++ b/stories/components/dataDisplay/swiper/Swiper.stories.mdx
@@ -4,8 +4,8 @@ import Swiper, {
     SwiperControlPositions,
     SwiperIndicatorColors,
     SwiperIndicatorPositions,
-} from '@/components/components/dataDisplay/Swiper';
-import SwiperItemExample from './SwiperItemExample';
+} from '@/components/components/dataDisplay/Swiper.vue';
+import SwiperItemExample from './SwiperItemExample.vue';
 
 <Meta
     title="Data Display/Swiper"
