--- a/stories/components/dataEntry/Dropdown.stories.mdx
+++ b/stories/components/dataEntry/Dropdown.stories.mdx
@@ -1,11 +1,11 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Dropdown from '@/components/components/dataEntry/Dropdown';
-import List from '@/components/components/dataDisplay/list/list/List';
-import ListItem from '@/components/components/dataDisplay/list/list/ListItem';
-import Divider from '@/components/elements/utility/Divider';
-import SearchInput from '@/components/components/dataEntry/input/SearchInput';
-import TextField from '@/components/components/dataEntry/input/TextField';
-import Label from '@/components/components/dataDisplay/Label';
+import Dropdown from '@/components/components/dataEntry/Dropdown.vue';
+import List from '@/components/components/dataDisplay/list/list/List.vue';
+import ListItem from '@/components/components/dataDisplay/list/list/ListItem.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
+import SearchInput from '@/components/components/dataEntry/input/SearchInput.vue';
+import TextField from '@/components/components/dataEntry/input/TextField.vue';
+import Label from '@/components/components/dataDisplay/Label.vue';
 import clickOutside from '@/directives/click-outside';
 
 <Meta
