--- a/stories/components/dataEntry/Select.stories.mdx
+++ b/stories/components/dataEntry/Select.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Select, { selectSizes, selectTypes }  from '@/components/components/dataEntry/Select';
-import Typography from '@/components/elements/core/typography/Typography';
+import Select, { selectSizes, selectTypes }  from '@/components/components/dataEntry/Select.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 import { colors } from '@/utils/constants/color';
 
 <Meta
