--- a/stories/components/dataEntry/input/InputGroup.stories.mdx
+++ b/stories/components/dataEntry/input/InputGroup.stories.mdx
@@ -1,12 +1,12 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Grid from '@/components/layout/Grid';
-import Row from '@/components/layout/Row';
-import StyleCol from '@/components/layout/StyleCol';
-import InputGroup from '@/components/components/dataEntry/input/InputGroup';
-import TextField from '@/components/components/dataEntry/input/TextField';
-import Button from '@/components/components/general/button/Button';
-import Box from '@/components/components/general/Box';
-import Hint from '@/components/components/dataDisplay/Hint';
+import Grid from '@/components/layout/Grid.vue';
+import Row from '@/components/layout/Row.vue';
+import StyleCol from '@/components/layout/StyleCol.vue';
+import InputGroup from '@/components/components/dataEntry/input/InputGroup.vue';
+import TextField from '@/components/components/dataEntry/input/TextField.vue';
+import Button from '@/components/components/general/button/Button.vue';
+import Box from '@/components/components/general/Box.vue';
+import Hint from '@/components/components/dataDisplay/Hint.vue';
 
 <Meta
     title="Data Entry/Input/InputGroup"
