--- a/stories/components/dataEntry/input/Textfield.stories.mdx
+++ b/stories/components/dataEntry/input/Textfield.stories.mdx
@@ -1,13 +1,13 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Grid from '@/components/layout/Grid';
-import Row from '@/components/layout/Row';
-import StyleCol from '@/components/layout/StyleCol';
-import TextField, { TextFieldTypes, TextFieldAligns } from '@/components/components/dataEntry/input/TextField';
-import Typography from '@/components/elements/core/typography/Typography';
-import Icon from '@/components/elements/core/icon/Icon';
-import Loader from '@/components/components/other/Loader';
-import InputGroup from '@/components/components/dataEntry/input/InputGroup';
-import Button from '@/components/components/general/button/Button';
+import Grid from '@/components/layout/Grid.vue';
+import Row from '@/components/layout/Row.vue';
+import StyleCol from '@/components/layout/StyleCol.vue';
+import TextField, { TextFieldTypes, TextFieldAligns } from '@/components/components/dataEntry/input/TextField.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
+import Loader from '@/components/components/other/Loader.vue';
+import InputGroup from '@/components/components/dataEntry/input/InputGroup.vue';
+import Button from '@/components/components/general/button/Button.vue';
 
 <Meta
 	title="Data Entry/Input/TextField"
