--- a/stories/components/etc/TellingAvatarQuote.stories.mdx
+++ b/stories/components/etc/TellingAvatarQuote.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Grid from '@/components/layout/Grid';
-import Row from '@/components/layout/Row';
-import StyleCol from '@/components/layout/StyleCol';
-import TellingAvatarQuote from '@/components/components/etc/TellingAvatarQuote';
-import Icon, { IconNames } from '@/components/elements/core/icon/Icon';
+import Grid from '@/components/layout/Grid.vue';
+import Row from '@/components/layout/Row.vue';
+import StyleCol from '@/components/layout/StyleCol.vue';
+import TellingAvatarQuote from '@/components/components/etc/TellingAvatarQuote.vue';
+import Icon, { IconNames } from '@/components/elements/core/icon/Icon.vue';
 const iconOptions = [null, ...IconNames];
 import { colorKeys } from '@/utils/constants/color';
 
