--- a/stories/components/general/Box.stories.mdx
+++ b/stories/components/general/Box.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Box, { Elements } from '@/components/components/general/Box';
+import Box, { Elements } from '@/components/components/general/Box.vue';
 import { colors } from '@/utils/constants/color';
 
 <Meta
