--- a/stories/components/general/button/ButtonGroup.stories.mdx
+++ b/stories/components/general/button/ButtonGroup.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Button from '@/components/components/general/button/Button';
-import ButtonGroup, { buttonGroupSizes } from '@/components/components/general/button/ButtonGroup';
-import Typography from '@/components/elements/core/typography/Typography';
-import Icon from '@/components/elements/core/icon/Icon';
+import Button from '@/components/components/general/button/Button.vue';
+import ButtonGroup, { buttonGroupSizes } from '@/components/components/general/button/ButtonGroup.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
 
 <Meta
   title="General/Button/ButtonGroup"
