--- a/stories/components/general/button/LinkButton.stories.mdx
+++ b/stories/components/general/button/LinkButton.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import { TypographyTypes } from '@/components/elements/core/typography/Typography';
-import LinkButton, { linkButtonTargets } from '@/components/components/general/button/LinkButton';
+import { TypographyTypes } from '@/components/elements/core/typography/Typography.vue';
+import LinkButton, { linkButtonTargets } from '@/components/components/general/button/LinkButton.vue';
 
 <Meta
     title="General/Button/LinkButton"
