--- a/stories/components/general/button/NarrowButton.stories.mdx
+++ b/stories/components/general/button/NarrowButton.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import NarrowButton, { narrowButtonSizes } from '@/components/components/general/button/NarrowButton';
+import NarrowButton, { narrowButtonSizes } from '@/components/components/general/button/NarrowButton.vue';
 import { colorKeys } from '@/utils/constants/color';
-import Icon from '@/components/elements/core/icon/Icon';
+import Icon from '@/components/elements/core/icon/Icon.vue';
 
 <Meta
     title="General/Button/NarrowButton"
