--- a/stories/components/message/Alert.stories.mdx
+++ b/stories/components/message/Alert.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Alert, { AlertTypes } from '@/components/components/message/Alert';
-import Icon from "@/components/elements/core/icon/Icon";
+import Alert, { AlertTypes } from '@/components/components/message/Alert.vue';
+import Icon from "@/components/elements/core/icon/Icon.vue";
 import { colorKeys } from '@/utils/constants/color';
 
 <Meta
