--- a/stories/components/message/Banner.stories.mdx
+++ b/stories/components/message/Banner.stories.mdx
@@ -1,10 +1,10 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Banner from '@/components/components/message/Banner';
-import Button from "@/components/components/general/button/Button";
-import Typography from '@/components/elements/core/typography/Typography';
-import NewGrid from '@/components/layout/NewGrid';
-import NewRow from '@/components/layout/NewRow';
-import NewCol from '@/components/layout/NewCol';
+import Banner from '@/components/components/message/Banner.vue';
+import Button from "@/components/components/general/button/Button.vue";
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import NewGrid from '@/components/layout/NewGrid.vue';
+import NewRow from '@/components/layout/NewRow.vue';
+import NewCol from '@/components/layout/NewCol.vue';
 
 <Meta
 	title="Message/Banner"
