--- a/stories/components/message/Callout.stories.mdx
+++ b/stories/components/message/Callout.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Callout, { CalloutTypes, CalloutSizes } from '@/components/components/message/Callout';
-import Icon from '@/components/elements/core/icon/Icon';
+import Callout, { CalloutTypes, CalloutSizes } from '@/components/components/message/Callout.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
 
 <Meta
   title="Message/Callout"
