--- a/stories/components/message/modal/FullscreenModal.stories.mdx
+++ b/stories/components/message/modal/FullscreenModal.stories.mdx
@@ -1,10 +1,10 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import FullscreenModal, { fullscreenDirection } from '@/components/components/message/modal/FullscreenModal';
-import Button, { buttonColors } from '@/components/components/general/button/Button';
-import SearchInput from '@/components/components/dataEntry/input/SearchInput';
-import Icon from '@/components/elements/core/icon/Icon';
-import Typography from "@/components/elements/core/typography/Typography";
-import Divider from "@/components/elements/utility/Divider";
+import FullscreenModal, { fullscreenDirection } from '@/components/components/message/modal/FullscreenModal.vue';
+import Button, { buttonColors } from '@/components/components/general/button/Button.vue';
+import SearchInput from '@/components/components/dataEntry/input/SearchInput.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
+import Typography from "@/components/elements/core/typography/Typography.vue";
+import Divider from "@/components/elements/utility/Divider.vue";
 
 <Meta
     title="Message/Modal/FullscreenModal"
