--- a/stories/components/message/modal/ImageModal.stories.mdx
+++ b/stories/components/message/modal/ImageModal.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import { aligns } from '@/components/components/message/modal/BasicModal';
-import ImageModal from "@/components/components/message/modal/ImageModal";
-import Button, { buttonColors } from '@/components/components/general/button/Button';
+import { aligns } from '@/components/components/message/modal/BasicModal.vue';
+import ImageModal from "@/components/components/message/modal/ImageModal.vue";
+import Button, { buttonColors } from '@/components/components/general/button/Button.vue';
 
 <Meta
     title="Message/Modal/ImageModal"
