--- a/stories/components/message/modal/PermissionModal.stories.mdx
+++ b/stories/components/message/modal/PermissionModal.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
-import PermissionModal from '@/components/components/message/modal/PermissionModal';
-import Button from '@/components/components/general/button/Button';
+import PermissionModal from '@/components/components/message/modal/PermissionModal.vue';
+import Button from '@/components/components/general/button/Button.vue';
 import { colorKeys } from '@/utils/constants/color';
 
 <Meta
