--- a/stories/components/message/modal/WithFormModal.stories.mdx
+++ b/stories/components/message/modal/WithFormModal.stories.mdx
@@ -1,10 +1,10 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import WithFormModal, { aligns } from '@/components/components/message/modal/WithFormModal';
-import TextField from '@/components/components/dataEntry/input/TextField';
-import Button, { buttonColors } from '@/components/components/general/button/Button';
-import Typography from '@/components/elements/core/typography/Typography';
-import InputGroup from '@/components/components/dataEntry/input/InputGroup';
-import Select from '@/components/components/dataEntry/Select';
+import WithFormModal, { aligns } from '@/components/components/message/modal/WithFormModal.vue';
+import TextField from '@/components/components/dataEntry/input/TextField.vue';
+import Button, { buttonColors } from '@/components/components/general/button/Button.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import InputGroup from '@/components/components/dataEntry/input/InputGroup.vue';
+import Select from '@/components/components/dataEntry/Select.vue';
 
 <Meta
     title="Message/Modal/WithFormModal"
