--- a/stories/components/navigation/Header.stories.mdx
+++ b/stories/components/navigation/Header.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
-import Header from '@/components/components/navigation/Header';
+import Header from '@/components/components/navigation/Header.vue';
 
 <Meta
     title="Navigation/Header"
