--- a/stories/components/navigation/SubHeader.stories.mdx
+++ b/stories/components/navigation/SubHeader.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
 
-import SubHeader from '@/components/components/navigation/SubHeader';
+import SubHeader from '@/components/components/navigation/SubHeader.vue';
 
 <Meta
   title="Navigation/SubHeader"
