--- a/stories/components/navigation/TopBar.stories.mdx
+++ b/stories/components/navigation/TopBar.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
-import TopBar,{ headerTypes } from '@/components/components/navigation/TopBar';
-import IconButton from '@/components/components/general/button/IconButton';
+import TopBar,{ headerTypes } from '@/components/components/navigation/TopBar.vue';
+import IconButton from '@/components/components/general/button/IconButton.vue';
 
 <Meta
   title="Navigation/TopBar"
