--- a/stories/components/other/Loader.stories.mdx
+++ b/stories/components/other/Loader.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Loader, { LoaderSizes } from '@/components/components/other/Loader';
-import { buttonColors } from '@/components/components/general/button/Button';
-import Typography from '@/components/elements/core/typography/Typography';
+import Loader, { LoaderSizes } from '@/components/components/other/Loader.vue';
+import { buttonColors } from '@/components/components/general/button/Button.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 
 <Meta
   title="Other/Loader"
