--- a/stories/elements/core/Logo.stories.mdx
+++ b/stories/elements/core/Logo.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Logo from '@/components/elements/core/logo/Logo';
+import Logo from '@/components/elements/core/logo/Logo.vue';
 import { colors } from '@/utils/constants/color';
 
 <Meta
