--- a/stories/elements/core/Typography.stories.mdx
+++ b/stories/elements/core/Typography.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Typography, { TypographyTypes, Elements, Aligns, FontWeights } from '@/components/elements/core/typography/Typography';
+import Typography, { TypographyTypes, Elements, Aligns, FontWeights } from '@/components/elements/core/typography/Typography.vue';
 import { colorKeys } from '@/utils/constants/color';
 
 <Meta
