--- a/stories/elements/core/icon/EtcIcon.stories.mdx
+++ b/stories/elements/core/icon/EtcIcon.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story, Props, Canvas } from '@storybook/addon-docs/blocks';
-import EtcIcon, { EtcIconNames } from '@/components/elements/core/icon/EtcIcon';
+import EtcIcon, { EtcIconNames } from '@/components/elements/core/icon/EtcIcon.vue';
 import { colorKeys } from '@/utils/constants/color';
-import IconWrapper from './IconWrapper';
-import Typography from '@/components/elements/core/typography/Typography';
+import IconWrapper from './IconWrapper.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 
 <Meta
     title="Core/Icon/EtcIcon"
