--- a/stories/elements/core/shadow/Shadow.stories.mdx
+++ b/stories/elements/core/shadow/Shadow.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import BoxWithShadow from './BoxWithShadow';
+import BoxWithShadow from './BoxWithShadow.vue';
 
 <Meta
   title="Utility/Shadow"
