--- a/stories/components/dataDisplay/Reply.stories.mdx
+++ b/stories/components/dataDisplay/Reply.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Reply from '@/components/components/dataDisplay/Reply';
-import UserInformation from '@/components/components/dataDisplay/content/UserInformation';
-import Avatar from '@/components/components/dataDisplay/Avatar';
-import Icon from '@/components/elements/core/icon/Icon';
+import Reply from '@/components/components/dataDisplay/Reply.vue';
+import UserInformation from '@/components/components/dataDisplay/content/UserInformation.vue';
+import Avatar from '@/components/components/dataDisplay/Avatar.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
 import { colorKeys } from "@/utils/constants/color";
 
 <Meta
