--- a/stories/components/dataDisplay/card/CoreCard.stories.mdx
+++ b/stories/components/dataDisplay/card/CoreCard.stories.mdx
@@ -1,15 +1,15 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import CoreCard from '@/components/components/dataDisplay/card/CoreCard';
-import Content from '@/components/components/dataDisplay/content/Content';
-import Avatar from '@/components/components/dataDisplay/Avatar';
-import Icon from '@/components/elements/core/icon/Icon';
-import NewGrid from '@/components/layout/NewGrid';
-import NewRow from '@/components/layout/NewRow';
-import NewCol from '@/components/layout/NewCol';
-import Typography from '@/components/elements/core/typography/Typography';
-import ProfileWithText from '@/components/components/dataDisplay/content/ProfileWithText';
-import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup';
-import Chip from '@/components/components/dataDisplay/chips/Chip';
+import CoreCard from '@/components/components/dataDisplay/card/CoreCard.vue';
+import Content from '@/components/components/dataDisplay/content/Content.vue';
+import Avatar from '@/components/components/dataDisplay/Avatar.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
+import NewGrid from '@/components/layout/NewGrid.vue';
+import NewRow from '@/components/layout/NewRow.vue';
+import NewCol from '@/components/layout/NewCol.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import ProfileWithText from '@/components/components/dataDisplay/content/ProfileWithText.vue';
+import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup.vue';
+import Chip from '@/components/components/dataDisplay/chips/Chip.vue';
 
 <Meta
     title="Data Display/Card/CoreCard"
