--- a/stories/components/dataDisplay/content/UserInformation.stories.mdx
+++ b/stories/components/dataDisplay/content/UserInformation.stories.mdx
@@ -1,15 +1,15 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import UserInformation, { userInformationTypes } from '@/components/components/dataDisplay/content/UserInformation';
-import UserInformationName from "@/components/components/dataDisplay/content/UserInformationName";
-import UserInformationCaption from "@/components/components/dataDisplay/content/UserInformationCaption";
-import UserInformationChipGroup from "@/components/components/dataDisplay/content/UserInformationChipGroup";
-import UserInformationCompany from "@/components/components/dataDisplay/content/UserInformationCompany";
-import Content from '@/components/components/dataDisplay/content/Content';
-import Icon from '@/components/elements/core/icon/Icon';
-import Avatar from '@/components/components/dataDisplay/Avatar';
-import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup';
-import Chip from '@/components/components/dataDisplay/chips/Chip';
-import Divider from '@/components/elements/utility/Divider';
+import UserInformation, { userInformationTypes } from '@/components/components/dataDisplay/content/UserInformation.vue';
+import UserInformationName from "@/components/components/dataDisplay/content/UserInformationName.vue";
+import UserInformationCaption from "@/components/components/dataDisplay/content/UserInformationCaption.vue";
+import UserInformationChipGroup from "@/components/components/dataDisplay/content/UserInformationChipGroup.vue";
+import UserInformationCompany from "@/components/components/dataDisplay/content/UserInformationCompany.vue";
+import Content from '@/components/components/dataDisplay/content/Content.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
+import Avatar from '@/components/components/dataDisplay/Avatar.vue';
+import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup.vue';
+import Chip from '@/components/components/dataDisplay/chips/Chip.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
 
 <Meta
     title="Data Display/Content/UserInformation"
