--- a/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
+++ b/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import FileList from '@/components/components/dataDisplay/list/fileList/FileList';
-import FileInput from "@/components/components/dataEntry/input/FileInput";
-import FileSummary from '@/components/components/dataDisplay/list/fileList/FileSummary';
-import Divider from '@/components/elements/utility/Divider';
+import FileList from '@/components/components/dataDisplay/list/fileList/FileList.vue';
+import FileInput from "@/components/components/dataEntry/input/FileInput.vue";
+import FileSummary from '@/components/components/dataDisplay/list/fileList/FileSummary.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
 
 <Meta
   title="Data Display/List/FileList"
