--- a/stories/components/dataDisplay/rating/IconRating.stories.mdx
+++ b/stories/components/dataDisplay/rating/IconRating.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import IconRating from "@/components/components/dataDisplay/rating/IconRating";
+import IconRating from "@/components/components/dataDisplay/rating/IconRating.vue";
 import { colorKeys } from '@/utils/constants/color';
-import { IconNames } from '@/components/elements/core/icon/Icon';
+import { IconNames } from '@/components/elements/core/icon/Icon.vue';
 
 <Meta
 	title="Data Display/Rating/IconRating"
