--- a/stories/components/dataDisplay/rating/TextRating.stories.mdx
+++ b/stories/components/dataDisplay/rating/TextRating.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import TextRating, {TextRatingSizes} from "@/components/components/dataDisplay/rating/TextRating";
-import Typography from "@/components/elements/core/typography/Typography";
+import TextRating, {TextRatingSizes} from "@/components/components/dataDisplay/rating/TextRating.vue";
+import Typography from "@/components/elements/core/typography/Typography.vue";
 
 <Meta
     title="Data Display/Rating/TextRating"
