--- a/stories/components/dataEntry/DatePicker.stories.mdx
+++ b/stories/components/dataEntry/DatePicker.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import DatePicker, { valueTypes, colors } from '@/components/components/dataEntry/DatePicker';
-import Typography from '@/components/elements/core/typography/Typography';
+import DatePicker, { valueTypes, colors } from '@/components/components/dataEntry/DatePicker.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 
 <Meta
     title="Data Entry/DatePicker"
