--- a/stories/components/dataEntry/FileInput.stories.mdx
+++ b/stories/components/dataEntry/FileInput.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import FileInput from '@/components/components/dataEntry/input/FileInput';
-import FileList from '@/components/components/dataDisplay/list/fileList/FileList';
-import FileSummary from '@/components/components/dataDisplay/list/fileList/FileSummary';
-import Typography from '@/components/elements/core/typography/Typography';
-import Divider from '@/components/elements/utility/Divider';
+import FileInput from '@/components/components/dataEntry/input/FileInput.vue';
+import FileList from '@/components/components/dataDisplay/list/fileList/FileList.vue';
+import FileSummary from '@/components/components/dataDisplay/list/fileList/FileSummary.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
 
 <Meta
   title="Data Entry/FileInput"
