--- a/stories/components/dataEntry/Textarea.stories.mdx
+++ b/stories/components/dataEntry/Textarea.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
-import Textarea, { textareaTypes } from '@/components/components/dataEntry/Textarea';
+import Textarea, { textareaTypes } from '@/components/components/dataEntry/Textarea.vue';
 
 <Meta
     title="Data Entry/Textarea"
