--- a/stories/components/dataEntry/input/SearchInput.stories.mdx
+++ b/stories/components/dataEntry/input/SearchInput.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import SearchInput from '@/components/components/dataEntry/input/SearchInput';
-import Divider from '@/components/elements/utility/Divider';
+import SearchInput from '@/components/components/dataEntry/input/SearchInput.vue';
+import Divider from '@/components/elements/utility/Divider.vue';
 
 <Meta
     title="Data Entry/Input/SearchInput"
