--- a/stories/components/general/button/IconButton.stories.mdx
+++ b/stories/components/general/button/IconButton.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import { buttonSizes, buttonColors, buttonTypes } from '@/components/components/general/button/Button';
-import Typography from '@/components/elements/core/typography/Typography';
-import IconButton, { IconButtonSizes, IconButtonTypes } from "@/components/components/general/button/IconButton";
-import { IconNames } from "@/components/elements/core/icon/Icon";
+import { buttonSizes, buttonColors, buttonTypes } from '@/components/components/general/button/Button.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import IconButton, { IconButtonSizes, IconButtonTypes } from "@/components/components/general/button/IconButton.vue";
+import { IconNames } from "@/components/elements/core/icon/Icon.vue";
 
 <Meta
     title="General/Button/IconButton"
