--- a/stories/components/general/button/RatingButton.stories.mdx
+++ b/stories/components/general/button/RatingButton.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Typography from '@/components/elements/core/typography/Typography';
-import RatingButton, { RATING_BUTTON_COLORS } from "@/components/components/general/button/RatingButton";
-import { IconNames } from "@/components/elements/core/icon/Icon";
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import RatingButton, { RATING_BUTTON_COLORS } from "@/components/components/general/button/RatingButton.vue";
+import { IconNames } from "@/components/elements/core/icon/Icon.vue";
 
 <Meta
     title="General/Button/RatingButton"
