--- a/stories/components/message/Popover.stories.mdx
+++ b/stories/components/message/Popover.stories.mdx
@@ -1,12 +1,12 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Popover from '@/components/components/message/Popover';
+import Popover from '@/components/components/message/Popover.vue';
 import { placements } from '@/utils/constants/tooltip';
-import Typography from '@/components/elements/core/typography/Typography';
-import Icon from '@/components/elements/core/icon/Icon';
-import Button from '@/components/components/general/button/Button';
-import NewGrid from '@/components/layout/NewGrid';
-import NewRow from '@/components/layout/NewRow';
-import NewCol from '@/components/layout/NewCol';
+import Typography from '@/components/elements/core/typography/Typography.vue';
+import Icon from '@/components/elements/core/icon/Icon.vue';
+import Button from '@/components/components/general/button/Button.vue';
+import NewGrid from '@/components/layout/NewGrid.vue';
+import NewRow from '@/components/layout/NewRow.vue';
+import NewCol from '@/components/layout/NewCol.vue';
 
 <Meta
   title="Message/Popover"
