--- a/stories/elements/core/icon/AnimationIcon.stories.mdx
+++ b/stories/elements/core/icon/AnimationIcon.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Props, Canvas } from '@storybook/addon-docs/blocks';
-import AnimationIcon, { AnimationIconNames } from '@/components/elements/core/icon/AnimationIcon';
-import IconWrapper from './IconWrapper';
-import Typography from '@/components/elements/core/typography/Typography';
+import AnimationIcon, { AnimationIconNames } from '@/components/elements/core/icon/AnimationIcon.vue';
+import IconWrapper from './IconWrapper.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 
 <Meta
     title="Core/Icon/AnimationIcon"
