--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Props, Canvas } from '@storybook/addon-docs/blocks';
-import Icon, { IconNames } from '@/components/elements/core/icon/Icon';
+import Icon, { IconNames } from '@/components/elements/core/icon/Icon.vue';
 import { colorKeys } from '@/utils/constants/color';
-import IconWrapper from './IconWrapper';
-import EtcIcon from '@/components/elements/core/icon/EtcIcon';
-import Typography from '@/components/elements/core/typography/Typography';
+import IconWrapper from './IconWrapper.vue';
+import EtcIcon from '@/components/elements/core/icon/EtcIcon.vue';
+import Typography from '@/components/elements/core/typography/Typography.vue';
 
 <Meta
 	title="Core/Icon/Icon"
