--- a/stories/elements/utility/Overlay.stories.mdx
+++ b/stories/elements/utility/Overlay.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Overlay from '@/components/elements/utility/Overlay';
-import Button from '@/components/components/general/button/Button';
+import Overlay from '@/components/elements/utility/Overlay.vue';
+import Button from '@/components/components/general/button/Button.vue';
 
 <Meta
   title="Utility/Overlay"
