feat: add IconSkipSmallFill icon

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -187,6 +187,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconGoodSmallLine" />
                             <IconWrapper component="Icon" name="IconBadSmallLine" />
                             <IconWrapper component="Icon" name="IconSearchSmallLine" />
+                            <IconWrapper component="Icon" name="IconSkipSmallFill" />
                         </div>
                     </div>
                     <!--medium-->
