feat: lock xsmall 아이콘 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -105,6 +105,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconThreeDotXSmallFill" />
                             <IconWrapper component='Icon' name="IconLoadingXSmallFill" />
                             <IconWrapper component="Icon" name="IconExportXSmallLine"/>
+							<IconWrapper component="Icon" name="IconLockXSmallFill"/>
                         </div>
                     </div>
                     <!--small-->
