--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -76,6 +76,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconPlusXSmallLine"/>
                             <IconWrapper component="Icon" name="IconCloseXSmallLine"/>
                             <IconWrapper component="Icon" name="IconSearchXSmallLine"/>
+						  	<IconWrapper component="Icon" name="IconDownloadXSmallLine"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconCheckXSmallLine"/>
@@ -105,6 +106,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconThreeDotXSmallFill" />
                             <IconWrapper component='Icon' name="IconLoadingXSmallFill" />
                             <IconWrapper component="Icon" name="IconExportXSmallLine"/>
+							<IconWrapper component="Icon" name="IconLockXSmallFill"/>
                         </div>
                     </div>
                     <!--small-->
