feat: 아이콘 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -107,6 +107,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component='Icon' name="IconLoadingXSmallFill" />
                             <IconWrapper component="Icon" name="IconExportXSmallLine"/>
 							<IconWrapper component="Icon" name="IconLockXSmallFill"/>
+							<IconWrapper component="Icon" name="IconEmailXSmallFill"/>
                         </div>
                     </div>
                     <!--small-->
