--- a/stories/components/dataDisplay/Chip.stories.mdx
+++ b/stories/components/dataDisplay/Chip.stories.mdx
@@ -123,49 +123,26 @@ export const Basic = (args, { argTypes }) => ({
                             </template>
                         </div>
                     </template>
-                    <div class="mb-28">
-                        <div class="flex">
-                            <div class="flex-row mr-30 mb-8">
-                                <Chip left-icon="IconProfileXSmallFill" class="mr-8">Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="large">Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="xlarge">Chip</Chip>
-                                <Chip right-icon="IconProfileXSmallFill" class="mr-8">Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="large">Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="xlarge">Chip</Chip>
-                            </div>
+                <div class="mt-80">
+                    <h2>withIcon.ver</h2>
+                    <template v-for="(type, index) in ChipTypes">
+                        <div class="mb-18">
+                            <template v-for="(color, index) in ChipColors">
+                                <div class="flex">
+                                    <div class="flex-row mr-30 mb-8">
+                                        <template v-for="(size, index) in ChipSizes">
+                                            <Chip left-icon="IconBookmarkSmallLine" :type="type" :color="color" :size="size" class="mr-8">Chip</Chip>
+                                        </template>
+                                        <template v-for="(size, index) in ChipSizesWithCloseButton">
+                                            <Chip right-icon="IconBookmarkSmallFill" :type="type" :color="color" :size="size" class="mr-8" @clickCloseButton="handleClickChipClosebutton" @click="handleClick">Chip</Chip>
+                                        </template>
+                                    </div>
+                                </div>
+                            </template>
                         </div>
-                        <div class="flex">
-                            <div class="flex-row mr-30 mb-8">
-                                <Chip left-icon="IconProfileXSmallFill" class="mr-8" type="outline" color='success'>Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="large" type="outline" color='success'>Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="xlarge" type="outline" color='success'>Chip</Chip>
-                                <Chip right-icon="IconProfileXSmallFill" class="mr-8" type="outline" color='success'>Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="large" type="outline" color='success'>Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="xlarge" type="outline" color='success'>Chip</Chip>
-                            </div>
-                        </div>
-                        <div class='flex'>
-                            <div class="flex-row mr-30 mb-8">
-                                <Chip left-icon="IconProfileXSmallFill" class="mr-8" clickable color="primary">Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="large" clickable color="primary">Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="xlarge" clickable color="primary">Chip</Chip>
-                                <Chip right-icon="IconProfileXSmallFill" class="mr-8" clickable color="primary">Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="large" clickable color="primary">Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="xlarge" clickable color="primary">Chip</Chip>
-                            </div>
-                        </div>
-                        <div class='flex'>
-                            <div class="flex-row mr-30 mb-8">
-                                <Chip left-icon="IconProfileXSmallFill" class="mr-8" clickable type="outline" color='secondary'>Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="large" clickable type="outline" color="secondary">Chip</Chip>
-                                <Chip left-icon="IconProfileSmallFill" class="mr-8" size="xlarge" clickable type="outline" color="secondary">Chip</Chip>
-                                <Chip right-icon="IconProfileXSmallFill" class="mr-8" clickable type="outline" color="secondary">Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="large" clickable type="outline" color="secondary">Chip</Chip>
-                                <Chip right-icon="IconProfileSmallFill" class="mr-8" size="xlarge" clickable type="outline" color="secondary">Chip</Chip>
-                            </div>
-                        </div>
-                    </div>
+                    </template>
                 </div>
+            </div>
             `,
             data() {
                 return {
